<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/white"
        android:elevation="4dp"
        app:contentInsetStart="0dp"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:id="@+id/blackRectangle"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="45dp"
            android:background="@color/white">

            <Button
                android:id="@+id/button_back"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerVertical="true"
                android:background="@drawable/arrow_left"/>

            <TextView
                android:id="@+id/title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/dms_erifdisplay_regular"
                android:text="@string/title_book_info"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <Button
                android:id="@+id/right_button"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:background="@drawable/save_2"/>

        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:layout_above="@+id/cardView"
        android:layout_marginTop="30dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp">

                <ImageView
                    android:id="@+id/imageView02"
                    android:layout_width="374dp"
                    android:layout_height="220dp"
                    android:src="@drawable/book_more"
                    android:layout_centerHorizontal="true" />

                <RelativeLayout
                    android:id="@+id/miniTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/imageView02"
                    android:layout_marginTop="30dp">

                    <TextView
                        android:layout_width="199dp"
                        android:layout_height="30dp"
                        android:text="@string/book_title_4"
                        android:fontFamily="@font/dms_erifdisplay_regular"
                        android:textColor="@color/black"
                        android:textSize="22sp"
                        android:id="@+id/textView1"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="0dp"
                        android:layout_marginEnd="0dp"
                        android:layout_marginBottom="2dp" />

                    <TextView
                        android:layout_width="170dp"
                        android:layout_height="21dp"
                        android:text="@string/author_4"
                        android:textColor="@color/grey"
                        android:textSize="16sp"
                        android:id="@+id/textView2"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="32dp"
                        android:layout_marginEnd="0dp"
                        android:layout_marginBottom="2dp" />

                    <TextView
                        android:layout_width="65dp"
                        android:layout_height="38dp"
                        android:text="@string/price_4"
                        android:fontFamily="@font/dms_erifdisplay_regular"
                        android:textColor="@color/black"
                        android:textSize="28sp"
                        android:id="@+id/textView3"
                        android:layout_marginStart="307dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="0dp"
                        android:layout_marginBottom="0dp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/miniTitleSecond"
                    android:layout_width="match_parent"
                    android:layout_height="69dp"
                    android:layout_marginTop="24dp"
                    android:layout_below="@id/miniTitle">

                    <RelativeLayout
                        android:id="@+id/miniTitle1"
                        android:layout_width="117dp"
                        android:layout_height="69dp">

                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/rectangle"
                            android:scaleType="centerCrop" />

                        <TextView
                            android:id="@+id/textView11"
                            android:layout_width="66dp"
                            android:layout_height="21dp"
                            android:layout_marginTop="12dp"
                            android:layout_marginStart="26dp"
                            android:text="@string/text_released"
                            android:textColor="@color/grey"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/textView12"
                            android:layout_width="37dp"
                            android:layout_height="21dp"
                            android:layout_below="@id/textView11"
                            android:layout_marginTop="4dp"
                            android:layout_marginStart="40.5dp"
                            android:text="@string/date_4_book"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/miniTitle2"
                        android:layout_width="117dp"
                        android:layout_height="69dp"
                        android:layout_centerHorizontal="true">

                        <ImageView
                            android:id="@+id/imageView23"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/rectangle"
                            android:scaleType="centerCrop" />

                        <TextView
                            android:id="@+id/textView113"
                            android:layout_width="66dp"
                            android:layout_height="21dp"
                            android:layout_marginTop="12dp"
                            android:layout_marginStart="26dp"
                            android:text="@string/text_part"
                            android:textAlignment="center"
                            android:textColor="@color/grey"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/textView123"
                            android:layout_width="37dp"
                            android:layout_height="21dp"
                            android:layout_below="@id/textView113"
                            android:layout_marginTop="4dp"
                            android:layout_marginStart="40.5dp"
                            android:text="@string/part_4_book"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/miniTitle3"
                        android:layout_width="117dp"
                        android:layout_height="69dp"
                        android:layout_alignParentEnd="true">

                        <ImageView
                            android:id="@+id/imageView21"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/rectangle"
                            android:scaleType="centerCrop" />

                        <TextView
                            android:id="@+id/textView111"
                            android:layout_width="66dp"
                            android:layout_height="21dp"
                            android:layout_marginTop="12dp"
                            android:layout_marginStart="26dp"
                            android:text="@string/text_page"
                            android:textAlignment="center"
                            android:textColor="@color/grey"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/textView121"
                            android:layout_width="37dp"
                            android:layout_height="21dp"
                            android:layout_below="@id/textView111"
                            android:layout_marginTop="4dp"
                            android:layout_marginStart="40.5dp"
                            android:textAlignment="center"
                            android:text="@string/page_4_book"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                    </RelativeLayout>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/miniTitleThird"
                    android:layout_width="374dp"
                    android:layout_height="27dp"
                    android:layout_below="@id/miniTitleSecond"
                    android:layout_marginTop="30dp">

                    <Button
                        android:id="@+id/button_synopsis"
                        android:layout_width="93dp"
                        android:layout_height="27dp"
                        android:text="@string/tabs_synopsis"
                        android:textAllCaps="false"
                        android:background="@android:color/transparent"/>

                    <Button
                        android:id="@+id/button_details"
                        android:layout_width="93dp"
                        android:layout_height="27dp"
                        android:layout_toEndOf="@id/button_synopsis"
                        android:gravity="center"
                        android:text="@string/tabs_details"
                        android:textColor="@color/grey"
                        android:textAllCaps="false"
                        android:background="@android:color/transparent" />

                    <Button
                        android:id="@+id/button_author"
                        android:layout_width="93dp"
                        android:layout_height="27dp"
                        android:layout_toEndOf="@id/button_details"
                        android:gravity="center"
                        android:text="@string/tabs_author"
                        android:textColor="@color/grey"
                        android:textAllCaps="false"
                        android:background="@android:color/transparent" />

                    <Button
                        android:id="@+id/button_review"
                        android:layout_width="93dp"
                        android:layout_height="27dp"
                        android:layout_toEndOf="@id/button_author"
                        android:gravity="center"
                        android:text="@string/tabs_review"
                        android:textColor="@color/grey"
                        android:textAllCaps="false"
                        android:background="@android:color/transparent" />


                </RelativeLayout>

                <!-- Серая линия -->
                <View
                    android:id="@+id/line"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@id/miniTitleThird"
                    android:background="@color/light_grey" />


                <TextView
                    android:layout_below="@id/line"
                    android:layout_width="374dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/synopsis_4_book"
                    android:textColor="@color/grey"
                    android:textSize="16sp" />

            </RelativeLayout>


        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical"
        android:id="@+id/cardView"
        android:background="@color/white"
        android:layout_alignParentBottom="true">

        <!-- Виджет с тенью сверху -->
        <View
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:background="@drawable/shadow" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="24dp"
            android:background="@color/white">

            <LinearLayout
                android:id="@+id/button1"
                android:layout_width="177dp"
                android:layout_height="46dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/button_buy_book">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="30dp"
                    android:src="@drawable/book_black"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="8dp" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_reading"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:layout_gravity="center_vertical" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/button2"
                android:layout_width="177dp"
                android:layout_height="46dp"
                android:layout_alignParentEnd="true"
                android:background="@drawable/button_start"
                android:layout_marginEnd="20dp">

                <ImageView
                    android:id="@+id/imageView00"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="40dp"
                    android:src="@drawable/play_circle"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="8dp" />

                <TextView
                    android:id="@+id/textView001"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/play_audio"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:layout_gravity="center_vertical" />

            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>