<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:elevation="4dp"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:id="@+id/blackRectangle"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="45dp">

            <Button
                style="@style/Picture24dp"
                android:id="@+id/button_back"
                android:layout_centerVertical="true"
                android:background="@drawable/arrow_left"/>

            <TextView
                android:id="@+id/title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/dms_erifdisplay_regular"
                android:text="@string/notifications"
                android:textColor="?android:textColor"
                android:textSize="22sp" />

        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp">

        <LinearLayout
            android:layout_marginHorizontal="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="40dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_first"
                android:src="@drawable/empty_search_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="fitCenter"
                android:layout_gravity="center"
                android:adjustViewBounds="true" />

            <TextView
                android:layout_width="65dp"
                android:layout_height="38dp"
                android:text="@string/empty"
                android:textColor="?android:textColor"
                android:fontFamily="@font/dms_erifdisplay_regular"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:id="@+id/textView3"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:text="@string/you_dont_have_any_notification_at_this_time"
                android:textColor="?android:textColor"
                android:textSize="16sp"
                android:layout_gravity="center"
                android:id="@+id/textView4"
                android:layout_marginTop="10dp" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>